# open_provence

./: .env.sample  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yaml
configs/: open-provence-reranker-large-v1.yaml  open-provence-reranker-v1-gte-modernbert-base.yaml  open-provence-reranker-v1.yaml  open-provence-reranker-xsmall-v1.yaml  toy-open-provence-reranker-v1-gte-modernbert-base.yaml  toy-open-provence-reranker-v1.yaml
configs/eval_datasets/: en.yaml  en_nano.yaml  ja.yaml  ja_nano.yaml
docs/: create_context_relevance_dataset.md  eval_dataset.md  eval_mldr.md  train.md
docs/eval_reports/: open_provence_v1_eval_report.md
open_provence/: __init__.py  data_collator.py  data_structures.py  encoder.py  losses.py  modeling_open_provence_standalone.py  modeling_open_provence_transformers.py  runner.py  trainer.py  trainer_cli.py
open_provence/models/: __init__.py  open_provence_head.py
open_provence/utils/: __init__.py  model_architecture.py  modeling_export.py
scripts/: __init__.py  eval_datasets.py  eval_mldr.py  git_release_force_sync.sh
scripts/context-relevance-datasets/: add_context_spans_relevance.py  add_reranker_teacher_scores.py  frequency_filter_ds.py  generate_ds_from_sentense_transformer.py  upload_context_relevance_to_hf.py
scripts/eval_mldr/: generate_ignore_qid.py  ignored_questions.yaml
scripts/utils/: sync_output_modeling.py
tests/: test_data_structures.py  test_eval_mldr_official.py  test_items_sampling.py  test_modeling_default_dtype.py  test_modeling_open_provence.py  test_modeling_open_provence_process.py  test_sequential_fragmentize.py  test_tokenizer_special_tokens.py  test_trainer_sampling.py
tests/scripts/: test_generate_ds_from_sentense_transformer.py  test_sync_output_modeling.py
tests/utils/: test_model_architecture.py  test_modeling_export.py
