[project]
name = "open-provence"
version = "0.1.0"
description = "OpenProvence: efficient and robust context pruning for retrieval-augmented generation"
license = { text = "MIT" }
readme = "README.md"
authors = [
    { name = "OpenProvence Contributors", email = "hotchpotch@gmail.com" }
]
maintainers = [
    { name = "OpenProvence Contributors", email = "hotchpotch@gmail.com" }
]
requires-python = ">=3.11"
keywords = [
    "Query-dependent pruning",
    "Text pruning",
    "RAG",
    "Retrieval-Augmented Generation",
    "Transformer Networks",
    "PyTorch",
    "NLP",
    "deep learning",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "transformers>=4.57.1",
    "tqdm",
    "torch>=2.8.0,<2.9",
    "scikit-learn",
    "scipy",
    "huggingface-hub>=0.20.0",
    "Pillow",
    "typing_extensions>=4.5.0",
    "datasets==2.20.0",
    "sentencepiece>=0.2.0",
    "einops>=0.8.1",
    "protobuf>=6.31.1",
    "bunkai>=1.5.7",
    "langdetect>=1.0.9",
    "accelerate>=0.26.0",
    "wandb>=0.21.0",
    "matplotlib>=3.9.4",
    "nltk>=3.9.1",
    "fast-bunkai>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/hotchpotch/open_provence"
Repository = "https://github.com/hotchpotch/open_provence"
Documentation = "https://github.com/hotchpotch/open_provence/tree/main/docs"
Issues = "https://github.com/hotchpotch/open_provence/issues"


[project.optional-dependencies]
train = ["datasets", "accelerate>=0.20.3"]
dev = [
    "datasets",
    "accelerate>=0.20.3",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-xdist>=3.6.1",
]
flash-attn = ["flash-attn>=2.7.4.post1"]

[project.scripts]
open_provence_trainer = "open_provence.trainer_cli:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["open_provence*"]
namespaces = false

[tool.ruff]
target-version = "py311"
line-length = 99
fix = true
src = ["open_provence", "tests", "scripts"]
extend-exclude = [
  "configs",
  "debug_output",
  "docs",
  "htmlcov",
  "log",
  "output",
  "results",
  "open_provence.egg-info",
  "tmp",
  "utils",
  "wandb",
  "**/.mypy_cache",
  "**/.pytest_cache",
  ".tox",
  "venv",
  ".venv",
]
include = ["**/*.py"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "I",
  "UP",
]
ignore = [
  "E203", # Whitespace before ':'
  "E501", # Line too long (82 > 79 characters)
  "D105", # undocumented-magic-method
  "D107", # undocumented-public-init
  "D205", # blank-line-after-summary
  "D415", # ends-in-punctuation
  # DoNotAssignLambda
  "E731"
]

[tool.ruff.lint.per-file-ignores]
"examples/**" = [
    # Ignore `E402` (import violations) in all examples
    "E402", 
    # Ignore missing required imports
    "I002"
    ]
"docs/**" = [
    # Ignore missing required imports
    "I002"
    ]

[tool.ruff.lint.isort]
known-third-party = ["datasets"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
addopts = "--strict-markers -m 'not slow and not custom'"
markers = [
    "slow: marks tests as slow",
    "custom: marks tests for third-party models with custom modules"
]

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "Linux"
typeCheckingMode = "standard"
reportMissingImports = "none"  # External dependencies may not have stubs
reportUnusedImport = "warning"  # Allow unused imports that are re-exported
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = "warning"  # Common in unpacking
reportDuplicateImport = true
reportOptionalSubscript = false
reportOptionalMemberAccess = false
reportOptionalCall = false
reportOptionalIterable = false
reportOptionalContextManager = false
reportOptionalOperand = false
exclude = [
    "configs",
    "debug_output",
    "docs",
    "log",
    "output",
    "results",
    "open_provence.egg-info",
    "tmp",
    "utils",
    "wandb",
    "**/__pycache__",
    ".venv",
    "venv",
    ".tox",
]
include = [
    "open_provence",
    "tests",
    "scripts",
]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "torch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "torch-cpu", group = "cpu" },
    { index = "torch-cu128", group = "cuda", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]

[tool.uv]
default-groups = ["dev", "cuda"]
conflicts = [
    [
        { group = "cpu" },
        { group = "cuda" },
    ],
]

[dependency-groups]
cpu = [
    "torch>=2.8.0,<2.9",
]

cuda = [
    "torch>=2.8.0,<2.9",
]

dev = [
    "litellm>=1.77.7",
    "openai>=2.3.0",
    "pyright>=1.1.406",
    "pytest>=8.4.1",
    "pytest-xdist>=3.6.1",
    "sentence-transformers>=5.1.1",
    "ruff>=0.6.9",
    "tox-uv>=1.29.0",
    "wandb>=0.21.0",
    #    "vllm>=0.9.0.1",
    "trafilatura>=2.0.0",
    "spacy>=3.8.7",
]

flash-attn = [
    "flash-attn>=2.7.4.post1",
]
